[package]
name = "rudodoo"
version = "0.1.0"
authors = ["Charbel Jacquin <charbel.jacquin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
jsonrpc = "0.12.0"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
jsonrpc-client-core = "0.5.0"
jsonrpc-client-http = "0.5.0"
base64 = "0.13.0"
url = "*"
reqwest = { version = "0.11", features = ["blocking", "json", "cookies"] }
tokio = { version = "1", features = ["full"] }
lazy_static = "*"
rand = "*"