[package]
name = "roudoudou"
version = "0.1.0"
authors = ["Charbel Jacquin <charbel.jacquin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
base64 = "0.13.0"
url = "2.2.0"
reqwest = { version = "0.11.0", features = ["blocking", "json", "cookies"] }
#tokio = { version = "1.2.0", features = ["full"] }
lazy_static = "1.4.0"
rand = "0.8.3"
log = "0.4.14"
env_logger = "0.8.3"
error-chain = "0.12.4"
ngrok2 = { version = "*", path = "../ngrok2" }
